reduce unnecessary file IO by not reading unnecessary files